new model added with acc improved
